src/objects/QPMS__Inspection_Type_Task__c.object
<CustomObject>
    <description>This is used to save the task of inspection type</description>
    <fields>
        <fullName>QPMS__AdhocTask_Title__c</fullName>
        <description>AdhocTask Title</description>
        <inlineHelpText>AdhocTask Title</inlineHelpText>
        <label>AdhocTask Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Adhoc_Sequence__c</fullName>
        <description>It is used to store Adhoc Sequence.</description>
        <label>Adhoc Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <description>It will dispaly the allowed days for inspection type task</description>
        <inlineHelpText>Allowed Days</inlineHelpText>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integraion purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inspection Type</description>
        <inlineHelpText>Inspection Type</inlineHelpText>
        <label>Inspection Type</label>
        <referenceTo>QPMS__Inspection_Type__c</referenceTo>
        <relationshipName>Inspection_Type_General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Id__c</fullName>
        <description>It will used to store inspection Type ID.</description>
        <formula>QPMS__Inspection_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Name__c</fullName>
        <description>It will used to store inspection type name.</description>
        <formula>QPMS__Inspection_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence_Position__c</fullName>
        <description>Sequence in which task should be performed.</description>
        <inlineHelpText>Sequence in which task should be performed. For example, if value is &apos;3&apos; then tasks with sequence numbers &apos;1&apos; and &apos;2&apos; should be performed first.</inlineHelpText>
        <label>Sequence Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>It will dispaly picklist values for inspection type.</description>
        <inlineHelpText>Sequence</inlineHelpText>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>this is used to store record type information</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
                <value>
                    <fullName>Adhoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Inspection Type Task</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Inspection Type Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Type Tasks</pluralLabel>
    <recordTypes>
        <fullName>QPMS__AdhocTask</fullName>
        <active>true</active>
        <description>Adhoc</description>
        <label>AdhocTask</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Closure</fullName>
        <active>true</active>
        <description>Closure</description>
        <label>Closure</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Inspection</fullName>
        <active>true</active>
        <description>Inspection</description>
        <label>Inspection</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>